@@ -1670,6 +1670,11 @@ Bugzilla   : 16450
 Description: Add st_block checking to multistat.c.
 Details    : Add st_block checking to multistat.c.
 
+Severity   : minor
+Bugzilla   : 16450
+Description: Add lu_ref support to struct obd_device.
+Details    : Add lu_ref tracking to obd_device.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
